# webAssistantTeam4

./: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  env.sample  gunicorn-cfg.py  pyproject.toml  requirements.txt
apps/authentication/: admin.py  config.py  forms.py  models.py  urls.py  views.py
apps/contacts/: forms.py  models.py  views.py
apps/home/: urls.py  views.py
apps/news/: urls.py  views.py
apps/noteapp/: forms.py  models.py  urls.py  views.py
apps/storage/: models.py  urls.py  views.py
apps/templates/accounts/: login.html  register.html
apps/templates/contacts/: contact_add.html  contact_update.html  contacts.html
apps/templates/home/: app_file_storage.html  app_news.html  app_notes.html  index.html  login.html  profile.html
apps/templates/includes/: navigation.html  sidebar.html
apps/templates/layouts/: base.html
apps/templates/notes/: app_notes.html  note_add.html
apps/templates/storage/: files.html
core/: settings.py  urls.py
nginx/: web-app.conf
project/: db.sqlite3
project/apps/: 0001_initial.py  0002_file_uploaded_at_alter_file_file.py  __init__ (3).py  __init__ (6).py  admin.py  constants.py  file.py  file_categories.py  file_category (8).py  file_category.py  file_view.html  forms.py  queries.py  upload_page.html
project/apps/file_storage/: apps.py  urls.py
project/apps/scrapping/: apps.py
project/apps/search_app/: apps.py
project/apps/user_auth/: forms.py  urls.py  views.py
project/config/: asgi.py  settings.py  urls.py  wsgi.py
project/templates/: _base_form.html  base.html  header.html
(+16 files in other folders)
