[tool.poetry]
name = "webAssistantTeam4"
version = "0.1.1"
description = ""
authors = ["yuragoit <yuriy.skiter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2 = "^2.9.5"
django-autoslug = "^1.9.8"
pytils = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
